# AOC

2019/users/cbjamo/day1/: main.py
2019/users/cbjamo/day1_rust/: hello  hello.rs
2019/users/cbjamo/day2/: main.c
2019/users/cbjamo/day3/: main.c  main.c.bac
2019/users/cbjamo/day5/: main.c  test2
2019/users/cbjamo/day7/: main.c
2019/users/cbjamo/day9/: main.c
2019/users/dac098/: .clang-format  .gitattributes  CMakeLists.txt  CMakeSettings.json
2019/users/dac098/day_01/: main.js
2019/users/dac098/day_02/: CMakeLists.txt  main.cpp
2019/users/dac098/day_03/: CMakeLists.txt  main.cpp
2019/users/dac098/day_04/: CMakeLists.txt  main.cpp
2019/users/dac098/day_05/: CMakeLists.txt  main.cpp
2019/users/dac098/day_06/: CMakeLists.txt  main.cpp
2019/users/dac098/day_07/: CMakeLists.txt  main.cpp
2019/users/dac098/lib/Intcode/: Arg.h  Instructions.h  Operation.cpp  Operation.h  Process.cpp  Process.h  VM.h
2019/users/dan/Prob01/: main.cpp
2019/users/dan/Prob02/: main.cpp
2019/users/dan/Prob03/: main.cpp
2019/users/dan/Prob04/: main.cpp
2019/users/dan/Prob05/: main.cpp
2019/users/dan/Prob06/: main.cpp
2019/users/dan/Prob07/: main.cpp
2019/users/dan/Prob08/: main.cpp
2019/users/dan/Prob09/: main.cpp
2019/users/dan/Prob11/: main.cpp
2019/users/dan/Prob12/: main.cpp
2019/users/dan/Prob13/: main.cpp
2019/users/dan/Prob14/: main.cpp
2019/users/dan/Prob15/: main.cpp
2019/users/dan/Prob16/: main.cpp
2020/users/dac098/: package-lock.json  package.json  tsconfig.json
2020/users/dan/: build-pi.sh
2021/src/: day2.rs  day3.rs
(+141 files in other folders)
